[tool.poetry]
name = "create-tomochain-masternode"
version = "1.2.2"
description = "Set up a TomoChain masternode by running one command."
readme = "README.md"
license = "GPL-3.0+"
homepage = "https://tomochain.com"
repository = "https://github.com/tomochain/create-tomochain-masternode"
# documentation = "https://docs.tomochain.com/"
keywords = ["tomochain", "blockchain", "masternode", "node"]
authors = ["etienne-napoleone <etienne@tomochain.com>"]

[tool.poetry.dependencies]
python = "^3.5"
click = "^7.0"
jinja2 = "^2.10"
pyyaml = "^3.13"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.6"
coverage = "^4.5"
coveralls = "^1.5"
pyinstaller = "^3.4"

[tool.poetry.scripts]
create-tomochain-masternode = "create_tomochain_masternode.main:entrypoint"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
